Create Models and Database

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "LocalConnection" : 
+      "Your_Connection_String"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
